--- a/DOGE_Price_&_Sentiment_Analysis.ipynb
+++ b/DOGE_Price_&_Sentiment_Analysis.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -826,6 +826,7 @@
     }
    ],
    "source": [
+    "# Loading wiki df \n",
     "wiki = pd.read_csv('D:\\Python_Files\\Crypto\\doge_wikipedia_edits.csv', index_col = 0, parse_dates=True)\n",
     "wiki"
    ]
